# AdventOfCode2022

./: pyproject.toml
Day01/: Day01.py
Day02/: Day02.py
Day03/: Day03.py
Day04/: Day04.py
Day05/: Day05.py
Day06/: Day06.py
Day07/: Day07.py
Day1/: Calories.py
Day2/: RPS.py
Day3/: Day3.py
Day4/: Day4.py
Day5/: Day5.py
Day6/: Day6.py
